--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -234,15 +234,4 @@ select option {
   }
 }
 
-@media screen and (max-width: 480px) {
-  div[class*="modal_"], div[class*="_modal__"] {
-    width: 100vw !important;
-    max-width: 100vw !important;
-    max-height: 90dvh !important;
-    margin: auto 0 0 0 !important;
-    border-radius: 24px 24px 0 0 !important;
-  }
-  div[class*="modalOverlay"] {
-    padding: 0 !important;
-  }
 }
